--- a/genindex.html
+++ b/genindex.html
@@ -653,6 +653,10 @@
   </dt>
 
       
+  <dt><a href="core/dataclasses.html#iceprod.core.dataclasses.Data.filecatalog">filecatalog() (iceprod.core.dataclasses.Data method)</a>
+  </dt>
+
+      
   <dt><a href="server/dbmethods.html#iceprod.server.dbmethods.filtered_input">filtered_input() (in module iceprod.server.dbmethods)</a>
   </dt>
 
