--- a/_modules/iceprod/core/exe.html
+++ b/_modules/iceprod/core/exe.html
@@ -379,7 +379,7 @@
                 <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">[</span><span class="n">e</span><span class="p">]</span> <span class="o">=</span> <span class="n">env</span><span class="p">[</span><span class="s">&#39;environment&#39;</span><span class="p">][</span><span class="n">e</span><span class="p">]</span></div>
 
 <div class="viewcode-block" id="downloadResource"><a class="viewcode-back" href="../../../core/exe.html#iceprod.core.exe.downloadResource">[docs]</a><span class="k">def</span> <span class="nf">downloadResource</span><span class="p">(</span><span class="n">env</span><span class="p">,</span> <span class="n">resource</span><span class="p">,</span> <span class="n">remote_base</span><span class="o">=</span><span class="k">None</span><span class="p">,</span>
-                     <span class="n">local_base</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
+                     <span class="n">local_base</span><span class="o">=</span><span class="k">None</span><span class="p">,</span> <span class="n">checksum</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Download a resource and put location in the env&quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">remote_base</span><span class="p">:</span>
         <span class="n">remote_base</span> <span class="o">=</span> <span class="n">env</span><span class="p">[</span><span class="s">&#39;options&#39;</span><span class="p">][</span><span class="s">&#39;resource_url&#39;</span><span class="p">]</span>
@@ -425,6 +425,11 @@
             <span class="n">functions</span><span class="o">.</span><span class="n">download</span><span class="p">(</span><span class="n">url</span><span class="p">,</span> <span class="n">local</span><span class="p">,</span> <span class="n">options</span><span class="o">=</span><span class="n">download_options</span><span class="p">)</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">local</span><span class="p">):</span>
                 <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;file does not exist&#39;</span><span class="p">)</span>
+            <span class="k">if</span> <span class="n">checksum</span><span class="p">:</span>
+                <span class="c"># check the checksum</span>
+                <span class="n">cksm</span> <span class="o">=</span> <span class="n">functions</span><span class="o">.</span><span class="n">sha512sum</span><span class="p">(</span><span class="n">local</span><span class="p">)</span>
+                <span class="k">if</span> <span class="n">cksm</span> <span class="o">!=</span> <span class="n">checksum</span><span class="p">:</span>
+                    <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;checksum validation failed&#39;</span><span class="p">)</span>
         <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
             <span class="n">failed</span> <span class="o">=</span> <span class="k">True</span>
             <span class="n">logger</span><span class="o">.</span><span class="n">critical</span><span class="p">(</span><span class="s">&#39;failed to download %s to %s&#39;</span><span class="p">,</span> <span class="n">url</span><span class="p">,</span> <span class="n">local</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
@@ -461,7 +466,14 @@
         <span class="n">local_base</span> <span class="o">=</span> <span class="n">env</span><span class="p">[</span><span class="s">&#39;options&#39;</span><span class="p">][</span><span class="s">&#39;data_directory&#39;</span><span class="p">]</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">local_base</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span>
-    <span class="n">downloadResource</span><span class="p">(</span><span class="n">env</span><span class="p">,</span><span class="n">data</span><span class="p">,</span><span class="n">remote_base</span><span class="p">,</span><span class="n">local_base</span><span class="p">)</span></div>
+
+    <span class="k">try</span><span class="p">:</span>
+        <span class="n">filecatalog</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">filecatalog</span><span class="p">(</span><span class="n">env</span><span class="p">)</span>
+        <span class="n">path</span><span class="p">,</span> <span class="n">checksum</span> <span class="o">=</span> <span class="n">filecatalog</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="s">&#39;local&#39;</span><span class="p">])</span>
+    <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
+        <span class="c"># no filecatalog available</span>
+        <span class="n">checksum</span> <span class="o">=</span> <span class="k">None</span>
+    <span class="n">downloadResource</span><span class="p">(</span><span class="n">env</span><span class="p">,</span> <span class="n">data</span><span class="p">,</span> <span class="n">remote_base</span><span class="p">,</span> <span class="n">local_base</span><span class="p">,</span> <span class="n">checksum</span><span class="o">=</span><span class="n">checksum</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="uploadData"><a class="viewcode-back" href="../../../core/exe.html#iceprod.core.exe.uploadData">[docs]</a><span class="k">def</span> <span class="nf">uploadData</span><span class="p">(</span><span class="n">env</span><span class="p">,</span> <span class="n">data</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Upload data&quot;&quot;&quot;</span>
@@ -513,17 +525,39 @@
         <span class="n">logger</span><span class="o">.</span><span class="n">critical</span><span class="p">(</span><span class="s">&#39;failed to upload %s to %s&#39;</span><span class="p">,</span> <span class="n">local</span><span class="p">,</span> <span class="n">url</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span>
         <span class="k">raise</span> <span class="ne">Exception</span><span class="p">(</span><span class="s">&#39;failed to upload {} to {}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">local</span><span class="p">,</span> <span class="n">url</span><span class="p">))</span>
     <span class="k">finally</span><span class="p">:</span>
+        <span class="n">stats</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s">&#39;name&#39;</span><span class="p">:</span> <span class="n">url</span><span class="p">,</span>
+            <span class="s">&#39;error&#39;</span><span class="p">:</span> <span class="n">failed</span><span class="p">,</span>
+            <span class="s">&#39;now&#39;</span><span class="p">:</span> <span class="n">datetime</span><span class="o">.</span><span class="n">utcnow</span><span class="p">()</span><span class="o">.</span><span class="n">isoformat</span><span class="p">(),</span>
+            <span class="s">&#39;duration&#39;</span><span class="p">:</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span><span class="o">-</span><span class="n">start_time</span><span class="p">,</span>
+        <span class="p">}</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">failed</span><span class="p">:</span>
+            <span class="n">stats</span><span class="p">[</span><span class="s">&#39;size&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">getsize</span><span class="p">(</span><span class="n">local</span><span class="p">)</span>
+            <span class="n">stats</span><span class="p">[</span><span class="s">&#39;rate_MBps&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;size&#39;</span><span class="p">]</span><span class="o">/</span><span class="mi">1000</span><span class="o">/</span><span class="mi">1000</span><span class="o">/</span><span class="n">stats</span><span class="p">[</span><span class="s">&#39;duration&#39;</span><span class="p">]</span>
         <span class="k">if</span> <span class="s">&#39;stats&#39;</span> <span class="ow">in</span> <span class="n">env</span><span class="p">:</span>
-            <span class="n">stats</span> <span class="o">=</span> <span class="p">{</span>
-                <span class="s">&#39;name&#39;</span><span class="p">:</span> <span class="n">url</span><span class="p">,</span>
-                <span class="s">&#39;error&#39;</span><span class="p">:</span> <span class="n">failed</span><span class="p">,</span>
-                <span class="s">&#39;now&#39;</span><span class="p">:</span> <span class="n">datetime</span><span class="o">.</span><span class="n">utcnow</span><span class="p">()</span><span class="o">.</span><span class="n">isoformat</span><span class="p">(),</span>
-                <span class="s">&#39;duration&#39;</span><span class="p">:</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span><span class="o">-</span><span class="n">start_time</span><span class="p">,</span>
+            <span class="n">env</span><span class="p">[</span><span class="s">&#39;stats&#39;</span><span class="p">][</span><span class="s">&#39;upload&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">stats</span><span class="p">)</span>
+
+    <span class="c"># if successful, add to filecatalog</span>
+    <span class="k">try</span><span class="p">:</span>
+        <span class="n">filecatalog</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">filecatalog</span><span class="p">(</span><span class="n">env</span><span class="p">)</span>
+    <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
+        <span class="k">pass</span> <span class="c"># no filecatalog available</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="k">try</span><span class="p">:</span>
+            <span class="n">cksm</span> <span class="o">=</span> <span class="n">functions</span><span class="o">.</span><span class="n">sha512sum</span><span class="p">(</span><span class="n">local</span><span class="p">)</span>
+            <span class="n">metadata</span> <span class="o">=</span> <span class="p">{</span>
+                <span class="s">&#39;file_size&#39;</span><span class="p">:</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;size&#39;</span><span class="p">],</span>
+                <span class="s">&#39;create_date&#39;</span><span class="p">:</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;now&#39;</span><span class="p">],</span>
+                <span class="s">&#39;modify_date&#39;</span><span class="p">:</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;now&#39;</span><span class="p">],</span>
+                <span class="s">&#39;data_type&#39;</span><span class="p">:</span> <span class="s">&#39;simulation&#39;</span><span class="p">,</span>
+                <span class="s">&#39;transfer_duration&#39;</span><span class="p">:</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;duration&#39;</span><span class="p">],</span>
+                <span class="s">&#39;transfer_MBps&#39;</span><span class="p">:</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;rate_MBps&#39;</span><span class="p">],</span>
             <span class="p">}</span>
-            <span class="k">if</span> <span class="ow">not</span> <span class="n">failed</span><span class="p">:</span>
-                <span class="n">stats</span><span class="p">[</span><span class="s">&#39;size&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">getsize</span><span class="p">(</span><span class="n">local</span><span class="p">)</span>
-                <span class="n">stats</span><span class="p">[</span><span class="s">&#39;rate_MBps&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">stats</span><span class="p">[</span><span class="s">&#39;size&#39;</span><span class="p">]</span><span class="o">/</span><span class="mi">1000</span><span class="o">/</span><span class="mi">1000</span><span class="o">/</span><span class="n">stats</span><span class="p">[</span><span class="s">&#39;duration&#39;</span><span class="p">]</span>
-            <span class="n">env</span><span class="p">[</span><span class="s">&#39;stats&#39;</span><span class="p">][</span><span class="s">&#39;upload&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">stats</span><span class="p">)</span></div>
+            <span class="n">options</span> <span class="o">=</span> <span class="p">(</span><span class="s">&#39;dataset&#39;</span><span class="p">,</span><span class="s">&#39;dataset_id&#39;</span><span class="p">,</span><span class="s">&#39;task_id&#39;</span><span class="p">,</span><span class="s">&#39;task&#39;</span><span class="p">,</span><span class="s">&#39;job&#39;</span><span class="p">,</span><span class="s">&#39;debug&#39;</span><span class="p">)</span>
+            <span class="n">metadata</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="n">env</span><span class="p">[</span><span class="s">&#39;options&#39;</span><span class="p">][</span><span class="n">k</span><span class="p">]</span> <span class="k">for</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">options</span> <span class="k">if</span> <span class="n">k</span> <span class="ow">in</span> <span class="n">env</span><span class="p">[</span><span class="s">&#39;options&#39;</span><span class="p">]})</span>
+            <span class="n">filecatalog</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="s">&#39;local&#39;</span><span class="p">],</span> <span class="n">url</span><span class="p">,</span> <span class="n">cksm</span><span class="p">,</span> <span class="n">metadata</span><span class="p">)</span>
+        <span class="k">except</span> <span class="ne">Exception</span><span class="p">:</span>
+            <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;failed to add %r to filecatalog&#39;</span><span class="p">,</span> <span class="n">url</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="setupClass"><a class="viewcode-back" href="../../../core/exe.html#iceprod.core.exe.setupClass">[docs]</a><span class="k">def</span> <span class="nf">setupClass</span><span class="p">(</span><span class="n">env</span><span class="p">,</span> <span class="n">class_obj</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Set up a class for use in modules, and put it in the env&quot;&quot;&quot;</span>
