--- a/genindex.html
+++ b/genindex.html
@@ -1905,6 +1905,10 @@
   </dt>
 
       
+  <dt><a href="server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_truncate_dataset">rpc_truncate_dataset() (iceprod.server.dbmethods.rpc.rpc method)</a>
+  </dt>
+
+      
   <dt><a href="server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_update_config">rpc_update_config() (iceprod.server.dbmethods.rpc.rpc method)</a>
   </dt>
 
