--- a/server/details/dbtables.html
+++ b/server/details/dbtables.html
@@ -147,7 +147,7 @@
 <li>name : str</li>
 <li>description : str</li>
 <li>gridspec : Text  <span class="gray"># json of {task:[gridspec]}</span></li>
-<li>status : str  <span class="gray"># possible statuses: processing, complete, suspended, errors</span></li>
+<li>status : str  <span class="gray"># possible statuses: processing, truncated, complete, suspended, errors</span></li>
 <li>username : str</li>
 <li>institution : str</li>
 <li>submit_host : str</li>
