--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -1101,6 +1101,12 @@
         <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update dataset set status=&quot;suspended&quot; where dataset_id = ?&#39;</span>
         <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
         <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span></div>
+        
+    <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
+<div class="viewcode-block" id="rpc.rpc_truncate_dataset"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_truncate_dataset">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_truncate_dataset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset_id</span><span class="p">):</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update dataset set status=&quot;truncated&quot; where dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span></div>
 
     <span class="c">### Public Methods ###</span>
 
