--- a/_modules/iceprod/server/dbmethods/cron.html
+++ b/_modules/iceprod/server/dbmethods/cron.html
@@ -344,7 +344,7 @@
             <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update job set status = &quot;complete&quot;, status_changed = ? &#39;</span>
             <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39; where job_id = ?&#39;</span>
             <span class="k">for</span> <span class="n">job_id</span> <span class="ow">in</span> <span class="n">job_ids</span><span class="p">:</span>
-                <span class="n">dataset_id</span> <span class="o">=</span> <span class="n">jobs</span><span class="p">[</span><span class="n">job_id</span><span class="p">]</span>
+                <span class="n">dataset_id</span> <span class="o">=</span> <span class="n">jobs</span><span class="p">[</span><span class="n">job_id</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span>
 
                 <span class="c"># update job status</span>
                 <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;job %s marked as complete&#39;</span><span class="p">,</span><span class="n">job_id</span><span class="p">)</span>
