add button to truncate a dataset, stopping the buffering of new jobs. fixes #206

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -34,6 +34,7 @@
     <a href='javascript:call("reset_dataset");'>Reset</a>
     <a href='javascript:call("hard_reset_dataset");'>Hard Reset</a>
     <a href='javascript:call("suspend_dataset");'>Suspend</a>
+    <a href='javascript:call("truncate_dataset");'>Truncate</a>
 </div>
 {% end %}
 
